--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "google-generativeai>=0.8.5",
     "pillow>=11.3.0",
+    "python-dotenv>=1.1.1",
     "streamlit>=1.48.0",
 ]
