--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
-Pillow
-google-generativeai
-python-dotenv
+streamlit>=1.31.0
+Pillow>=10.0.0
+google-generativeai>=0.3.0
+python-dotenv>=1.0.0
