--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "palm-reader"
 version = "0.1.0"
-description = "Add your description here"
+description = "AI Palm Reader"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "google-generativeai>=0.8.5",
-    "pillow>=11.3.0",
+    "instructor>=1.10.0",
+    "litellm>=1.75.5.post1",
     "python-dotenv>=1.1.1",
     "streamlit>=1.48.0",
 ]
